# MoLa

./: CMakeLists.txt  README.md  test.py
idea/: MoLa.md  idea.txt
logs/: compiled.txt  compiled_error.mola.txt  compiled_vm.txt
modules/: CMakeLists.txt  error.mola  test.mola  whatisit.mola
modules/test/: CMakeLists.txt
modules/whatisit/: CMakeLists.txt  whatisit.c
molaint/: CMakeLists.txt
molaint/src/: molaint.c
molaint/src/builtin/: builtin.c  builtin.h
molalib/: CMakeLists.txt
molalib/src/: CMakeLists.txt  api.h  cvector_utils.h  log.h
molalib/src/back/: CMakeLists.txt  api.h  cmap.c  cmap.h  cmod.c  cmod.h  env.c  env.h  error.h  gen.h  ident_map.c  object.h  stat.h  types.c  types.h  vm.c
molalib/src/back/types/: CMakeLists.txt  array.c  array.h  string.c  string.h
molalib/src/front/: CMakeLists.txt  api.h  ast.c  ast.h  lex.yy.c  parser.h  rules.output  rules.tab.c  rules.tab.h  rules.y  y.output
scripts/: generate_parser  profile
src/: CMakeLists.txt  cvector.h  log.h  main.c  util.h
src/back/: CMakeLists.txt  alloc.c  alloc.h  api.h  cmap.h  cmod.c  cmod.h  cvector.h  env.c  env.h  error.c  error.h  gc.c  gc.h  gen.c  gen.h  ident_map.c  ident_map.h  object.c  object.h  scope.c  scope.h  stat.c  types.c  types.h  vm.c  vm.h  xmempool.c  xmempool.h
src/front/: CMakeLists.txt  api.h  ast.c  ast.h  lex.yy.c  parser.c  parser.h  rules.l  rules.output  rules.tab.c  rules.tab.h  rules.y  symtab.c  symtab.h
tests/: gen.txt  parser.txt  vm.mola  vm.txt
