add_executable(molalang

back/alloc.c
back/alloc.h
back/api.h
back/cmap.c
back/cmap.h
back/env.c
back/env.h
back/error.c
back/error.h
back/gc.c
back/gc.h
back/gen.c
back/gen.h
back/ident_map.c
back/ident_map.h
back/object.c
back/object.h
back/scope.c
back/scope.h
back/stat.c
back/stat.h
back/types.c
back/types.h
back/vm.c
back/vm.h
back/xmempool.c
back/xmempool.h

front/api.h
front/ast.c
front/ast.h
front/lex.yy.c
front/parser.c
front/parser.h
front/rules.tab.c
front/rules.tab.h
front/symtab.c
front/symtab.h

api.h
cvector.h
log.h
main.c
util.c
util.h

)